--- a/test/test2.html
+++ b/test/test2.html
@@ -40,26 +40,9 @@
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Categories
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              {{#each categories}}
-              <a class="dropdown-item" href="#">{{ this.section }}</a>
-              {{/each}}
-            </div>
-          </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+      
+        <form class="form-inline form-control-md">
           <input
             class="form-control mr-sm-2"
             type="search"
